--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
+    "axios": "^1.6.8",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-heroicons": "^4.0.0",
